feat: seo y posicionamiento

--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-  <title>Digital DEV</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
+    rel="stylesheet">
+  <title>Curso de Desarrollo Web FullStack Online | Digital Dev</title>
+  <meta name="description"
+    content="Aprende HTML, CSS, JavaScript, React y Node.js desde cero. Curso FullStack con certificación digital. Inscríbete ahora." />
+  <meta name="keywords"
+    content="curso fullstack, curso desarrollo web, curso HTML CSS JavaScript React Node, curso online programacion" />
+  <meta name="author" content="Digital Dev" />
+  <meta property="og:title" content="Curso de Desarrollo Web FullStack Online | Digital Dev" />
+  <meta property="og:description"
+    content="Aprende HTML, CSS, JavaScript, React y Node.js desde cero. Curso FullStack con certificación digital. Inscríbete ahora." />
+  <meta property="og:image" content="/LOGO_CUADRADO_2.svg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://digitaldevcursos.com" />
 </head>
 
 <body>
